a.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-blog
spec:
  hosts:
  - “pyeden.com"
    gateways:
  - my-blog-gateway
    http:
  - match:
    - uri:
        prefix: /status
    - uri:
        prefix: /delay
        route:
    - destination:
        port:
          number: 8000
        host: my-blog
