dsz-blog-app_ssl.yml
apiVersion: v1
kind: Service
metadata:
  name: my-blog
  labels:
    app: my-blog
    service: my-blog
spec:
  ports:
  - name: http
    port: 8000
    targetPort: 8000
  - name: static
    port: 8001
    targetPort: 8001
  selector:
    app: my-blog



---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-blog
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: my-blog
      version: v1
  template:
    metadata:
      labels:
        app: my-blog
        version: v1
    spec:
      serviceAccountName: my-blog
      containers:
      - image: easzlab.io.local:5000/dsz-blog-app:v1
        imagePullPolicy: IfNotPresent
        name: my-blog
        ports:
        - containerPort: 8000
        - containerPort: 8001


---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: my-blog-gateway
spec:
  selector:
    istio: ingressgateway # use istio default ingress gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
  - port:
      number: 8001
      name: static
      protocol: HTTP
    hosts:
    - "*"

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-blog
spec:
  hosts:
  - "*"
  gateways:
  - my-blog-gateway
  http:
  - name: my-blog-v1
    match:
    - uri:
        prefix: /
    route:
    - destination:
        host: my-blog
        port:
          number: 8000
  - name: my-blog-static-v1
    match:
    - uri:
        exact: /media
    - uri:
        exact: /static
    - uri:
        exact: /favicon.ico
    route:
    - destination:
        host: my-blog
        port:
          number: 8001
